--- a/package.json
+++ b/package.json
@@ -1,35 +1,30 @@
 {
   "name": "restaurant-ai",
   "version": "1.0.0",
+  "main": "dist/index.js",
   "scripts": {
-    "dev": "npx nodemon",
     "build": "tsc",
-    "start": "node -r dotenv/config dist/index.js"
+    "start": "node dist/index.js",
+    "dev": "ts-node src/index.ts"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.58.0",
-    "body-parser": "^2.2.0",
+    "@supabase/supabase-js": "^2.0.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
-    "express": "^4.21.2",
-    "ioredis": "^5.8.0",
+    "express": "^4.18.2",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^2.0.2",
-    "openai": "^6.0.1",
-    "redis": "^5.8.3",
-    "stripe": "^19.0.0"
+    "openai": "^4.9.0",
+    "stripe": "^12.9.0"
   },
   "devDependencies": {
-    "@types/body-parser": "^1.19.6",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^4.17.23",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/multer": "^2.0.0",
-    "@types/node": "^20.19.19",
-    "@types/redis": "^4.0.11",
-    "@types/stripe": "^8.0.417",
-    "nodemon": "^3.0.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "^20.5.6",
+    "@types/stripe": "^12.6.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
